# coastal-change-detection-app

./: .dockerignore  .gitignore  Dockerfile  FOLIUM_MIGRATION.md  POSIT_DEPLOY.md  Procfile  QUICK_START.md  README.md  README_DEPLOY.md  REPO_CLEANUP.md  SHINY_README.md  UPDATES_SUMMARY.md  app.py  app_folium.py  app_simple.py  coastal_processor.py  diagnostic.py  docker-compose.yml  main.py  manifest.json  pyproject.toml  requirements.txt  requirements_shiny.txt  start_local.bat  test.html  test_simple.py
archive/: README.md  app.py  app_minimal.py  app_shiny.py  shiny_app.py
docs/: IMPROVEMENTS.md  LAYER_FIXES.md  MIGRATION_COMPLETE.md  README.md  TROUBLESHOOTING.md
tools/: archive_snapshot_and_remove.ps1
