[project]
name = "coastline-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.16",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "planetary-computer>=1.0",
    "pystac-client>=0.7",
    "rasterio>=1.3",
    "requests>=2.31",
    "scipy>=1.11",
    "shapely>=2.0",
    "streamlit>=1.38",
    "streamlit-folium>=0.20",
]
