[project]
name = "coastline-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.16",
    "ipyleaflet>=0.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.5.0",
    "rasterio>=1.3.0",
    "requests>=2.31.0",
    "scikit-image>=0.22.0",
    "scipy>=1.10.0",
    "shapely>=2.0.0",
    "shiny>=0.6.0",
    "shinywidgets>=0.3.0",
    "streamlit>=1.38",
    "streamlit-folium>=0.20",
]
